--- a/hobby.css
+++ b/hobby.css
@@ -15,6 +15,24 @@
       letter-spacing: 7px;
       background-color:#a4c8d6;
 }
+.sma-div{
+    background-color: rgba(255, 255, 255, 0);
+    margin-top: 30px;
+  }
+footer{
+    margin-top: 20px;
+    background-color:#dfd1a5;
+    color: #ffffff;
+    font-weight: bold;
+    text-align: center;
+    padding: 14px 10px 20px;
+}
+footer p{
+  background-color: #ffffff00;
+}
+footer p small{
+  background-color: #ffffff00;
+}
 
 header {
     padding: 10px 0;
@@ -86,6 +104,11 @@ html,body{
 .more-title{
     font-size:20px;
     font-weight:bold;
+    padding: 20px;
+}
+.more-title-ch{
+    font-size:25px;
+    font-weight:bolder;
     padding: 20px;
 }
 .bottom{
